Bug 431535 - Prefix Text in xy-Equation values section is not saved/applied
Summary: Prefix Text in xy-Equation values section is not saved/applied
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-13 12:10 UTC by H.H.
Modified: 2021-01-17 11:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2021-01-13 12:10:39 UTC
Choose to plot some values from a spreadsheet as xy-plot. Then in the values section choose to values displayed as (x,y) and set a prefix text. This option is not applied and not saved.
Comment 1 Alexander Semke 2021-01-13 19:38:51 UTC
(In reply to H.H. from comment #0)
> Choose to plot some values from a spreadsheet as xy-plot. Then in the values
> section choose to values displayed as (x,y) and set a prefix text. This
> option is not applied and not saved.

Right now you need the press Enter to get the new values accepted for prefix and suffix. We'll change this to get the changes immediately accepted without Enter as it is already done or should be done everywhere else.

Can you please confirm it's working for you with Enter?
Comment 2 H.H. 2021-01-15 08:30:59 UTC
Yes, it is working with enter, thanks.

But the format is also not saved (try save document, close, and reload), and here (select box) I cannot press enter.
Comment 3 Alexander Semke 2021-01-17 10:23:22 UTC
Git commit 48310f0bd89573128406bf87246c5fe9c2d33a0f by Alexander Semke.
Committed on 17/01/2021 at 10:21.
Pushed by asemke into branch 'master'.

[worksheet] save/load the values format in xy-curve and react on text
change for values prefix and suffix and not on return pressed event.
FIXED-IN: 2.9

M  +12   -1    src/backend/worksheet/plots/cartesian/XYCurve.cpp
M  +3    -3    src/kdefrontend/dockwidgets/XYCurveDock.cpp

https://invent.kde.org/education/labplot/commit/48310f0bd89573128406bf87246c5fe9c2d33a0f
Comment 4 Alexander Semke 2021-01-17 10:27:15 UTC
(In reply to H.H. from comment #2)
> Yes, it is working with enter, thanks.
> 
> But the format is also not saved (try save document, close, and reload), and
> here (select box) I cannot press enter.
I did a fix for this now. It will be part of the next release 2.9 and of the next patch release for 2.8 if we'll decide to produce another patch for 2.8. For openSuse we have nightly builds as documented on https://labplot.kde.org/download/. So, if you'd like to test the current development version of LabPlot and provide us feedback, you can use our nightly builds.
Comment 5 Stefan Gerlach 2021-01-17 11:47:33 UTC
Git commit b8b1b3bcf58393ae12e7e2c71a998a10b799ccbb by Stefan Gerlach.
Committed on 17/01/2021 at 11:46.
Pushed by sgerlach into branch 'release/2.8'.

Save/Load values format
FIXED-IN: 2.8.2

M  +1    -0    ChangeLog

https://invent.kde.org/education/labplot/commit/b8b1b3bcf58393ae12e7e2c71a998a10b799ccbb
Comment 6 Stefan Gerlach 2021-01-17 11:47:41 UTC
Git commit c0bd1980e1eba3ea450982ccf3dc8895dbaa9dbd by Stefan Gerlach, on behalf of Alexander Semke.
Committed on 17/01/2021 at 11:44.
Pushed by sgerlach into branch 'release/2.8'.

[worksheet] save/load the values format in xy-curve and react on text
change for values prefix and suffix and not on return pressed event.
FIXED-IN: 2.9

M  +12   -1    src/backend/worksheet/plots/cartesian/XYCurve.cpp
M  +3    -3    src/kdefrontend/dockwidgets/XYCurveDock.cpp

https://invent.kde.org/education/labplot/commit/c0bd1980e1eba3ea450982ccf3dc8895dbaa9dbd