[worksheet] save/load the values format in xy-curve and react on text change for values prefix and suffix and not on return pressed event.

BUG: 431535
FIXED-IN: 2.9